force-app/main/default/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>CreatedByText__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DamageCodeGroupText__c</fullName>
        <formula>Damage_Code_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damage Code Group Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DamageCodeText__c</fullName>
        <formula>Damage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damage Code Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DamageText__c</fullName>
        <label>Damage Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Damage Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Items (Damage Code Group)</relationshipLabel>
        <relationshipName>Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Damage_Code_Group_and_Text__c</fullName>
        <formula>IF(DamageCodeGroupText__c &lt;&gt; null &amp;&amp; Damage_Description__c = null,  DamageCodeGroupText__c,
IF(DamageCodeGroupText__c == null &amp;&amp; Damage_Description__c &lt;&gt; null,  Damage_Description__c,
IF(DamageCodeGroupText__c &lt;&gt; null &amp;&amp; Damage_Description__c &lt;&gt; null,  DamageCodeGroupText__c + &quot;: &quot; +  Damage_Description__c, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damage Code Group and Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Description__c</fullName>
        <formula>Damage__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damage Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Damage</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <label>Integration Flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_No__c</fullName>
        <label>Item No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Handles Last Activity for the Item</description>
        <label>Last Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Cause__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <description>Handles Last Cause for the Item</description>
        <label>Last Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotiItem__c</fullName>
        <externalId>true</externalId>
        <label>NotiItem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObjectPartCodeGroupText__c</fullName>
        <formula>Object_Part_Code_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Part Code Group Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectPartText__c</fullName>
        <formula>Object_Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Part Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Part_Code_Group_Text__c</fullName>
        <label>Object Part Code Group Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Part_Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Part Code Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Items (Object Part Code Group)</relationshipLabel>
        <relationshipName>Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Part_Code_Text__c</fullName>
        <label>Object Part Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Part_Code_and_Text__c</fullName>
        <formula>IF(ObjectPartCodeGroupText__c &lt;&gt; null &amp;&amp; Object_Part_Code_Text__c = null, DamageCodeGroupText__c,
IF(ObjectPartCodeGroupText__c == null &amp;&amp; Object_Part_Code_Text__c &lt;&gt; null, Damage_Description__c,
IF(ObjectPartCodeGroupText__c &lt;&gt; null &amp;&amp; Object_Part_Code_Text__c &lt;&gt; null, ObjectPartCodeGroupText__c + &quot;: &quot; + Object_Part_Code_Text__c, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Part Code and Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Part</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Items (Object Part)</relationshipLabel>
        <relationshipName>Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_No__c</fullName>
        <label>Sort No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>damage_code_group_description__c</fullName>
        <label>damage code group description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the Item has been marked as deleted or not. This is because Items cannot be hard deleted in the application.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIRPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIRPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSOAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSOAP</label>
        <type>Checkbox</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NotiItem__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>